@@ -19,6 +19,7 @@ namespace Cinemachine
     #else
     [ExecuteInEditMode]
     #endif
+    [DisallowMultipleComponent]
     public class Cinemachine3rdPersonAim : CinemachineExtension
     {
         /// <summary>Objects on these layers will be detected.</summary>
