@@ -12,6 +12,7 @@ namespace Cinemachine
     /// </summary>
     [AddComponentMenu("")] // Hide in menu
     [ExecuteAlways]
+    [DisallowMultipleComponent]
     public class CinemachinePixelPerfect : CinemachineExtension
     {
         protected override void PostPipelineStageCallback(
@@ -60,6 +61,7 @@ namespace Cinemachine
     /// sprites would appear pixel perfect when the virtual camera becomes live.
     /// </summary>
     [AddComponentMenu("")] // Hide in menu
+    [DisallowMultipleComponent]
     public class CinemachinePixelPerfect : MonoBehaviour {}
 }
 #endif
