@@ -1,6 +1,7 @@
 <size=20><b>Version 2.6.3</b></size>
 
 - Regression fix (1274989) - OnTargetObjectWarped broken for OrbitalTransposer
+- Bugfix (1256530) - disallow multiple components where appropriate
 
 <size=20><b>Version 2.6.2</b></size>
 - Regression fix: OnCameraCut Memory leak when using Cinemachine with PostProcessing package
